otus-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-auth
  template:
    metadata:
      labels:
        app: otus-auth
    spec:
      containers:
      - name: auth
        image: bl00dhound/auth:latest
        ports:
          - name: http
            containerPort: 8001
