otus-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: otus-auth
  ports:
    - protocol: TCP
      targetPort: http
      name: web
      port: 8001
  type: NodePort
