otus-auth/app-ingres.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.otus-auth.svc.cluster.local:8001/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Email,X-UserId,X-FirstName,X-LastName"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: otus-app-service
          servicePort: 8000
        path: /users
