otus-auth/auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth-service
          servicePort: 8001
        path: /login
      - backend:
          serviceName: auth-service
          servicePort: 8001
        path: /logout
      - backend:
          serviceName: auth-service
          servicePort: 8001
        path: /register
      - backend:
          serviceName: auth-service
          servicePort: 8001
        path: /signin
      - backend:
          serviceName: auth-service
          servicePort: 8001
        path: /auth
